--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
 	<div class="container">
 		<h3><b>Game Modes</b></h3>
 		<label class="line"></label>
-    <p id="demo">Single Player</p>
     <p id="demo">Local multiplayer</p>
-    <p id="demo">Online multiplayer</p>
 	</div>
 </div>
 
@@ -55,7 +53,34 @@
 	<div class="container">
 		<h3><b>Game Mechanics</b></h3>
 		<label class="line"></label>
-    <p id="demo"></p>
+    <p id="demo"><b>a. Races and unit type</b></p>
+
+    <p id="demo">The player can choose between two different races: <b>Human</b> and <b>Skeleton</b>, both have <br>three different types of unit which are tank, damage, and healer. </p>
+
+    <p id="demo"><b>Tank/Hero</b></p>
+    <p id="demo">Visually bigger than other units, the strongest unit type<br>
+      Health: 1000<br>
+      Damage: 100<br>
+      Damage range: 50<br>
+      Purchase cost: $50 / 1 unit<br>
+    </p>
+
+    <p id="demo"><b>Damage</b></p>
+    <p id="demo">Main damage unit type<br>
+      Health: 300<br>
+      Damage: 50<br>
+      Damage range: 30<br>
+      Purchase cost: $30 / 10 unit<br>
+    </p>
+
+    <p id="demo"><b>Support</b></p>
+    <p id="demo">The most vulnerable unit type, have the ability to heal other units<br>
+      Health: 150<br>
+      Heal range: 30<br>
+      Heal amount: 50 / time<br>
+      Cooldown: 3 sec<br>
+      Purchase cost: $40 / 1 unit<br>
+    </p>
 	</div>
 </div>
 
@@ -74,7 +99,7 @@
 	<div class="container">
 		<h3><b>AR World Generation</b></h3>
 		<label class="line"></label>
-    <p id="demo"></p>
+    <p id="demo">Coming Soon!</p>
 	</div>
 </div>
 
@@ -83,13 +108,13 @@
 	<div class="container">
 		<h3><b>Game Flow</b></h3>
 		<label class="line"></label>
-    <p id="demo"></p>
+    <p id="demo">Coming Soon!</p>
 	</div>
 </div>
 
 <!-- footer -->
 <div class="footer">
-	<p> &copy; Updated at Sep 02, 2018 | All Rights Reserved</p>
+	<p> &copy; Updated at Sep 17, 2018 | All Rights Reserved</p>
 </div>
 </body>
 </html>
